优化交互效果

--- a/App01.VLC/Controls/VlcView.xaml
+++ b/App01.VLC/Controls/VlcView.xaml
@@ -13,7 +13,7 @@
     <Grid>
         <wpf:VideoView x:Name="VideoView" Background="Black">
             <Grid>
-                <WrapPanel VerticalAlignment="Bottom" HorizontalAlignment="Right">
+                <WrapPanel VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,5,5">
                     <WrapPanel.Background>
                         <LinearGradientBrush StartPoint="0,1" EndPoint="1,0">
                             <GradientStop Offset="0" Color="LightGray" />
