--- a/App01.VLC/App.xaml
+++ b/App01.VLC/App.xaml
@@ -11,6 +11,7 @@
                     Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign3.Defaults.xaml" />
 
                 <!-- Other merged dictionaries here -->
+                <ResourceDictionary Source="Styles/Other.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
             <Thickness x:Key="ControlPageContentMargin">24,20,24,20</Thickness>
