--- a/App01.VLC/Controls/VlcView.xaml
+++ b/App01.VLC/Controls/VlcView.xaml
@@ -24,7 +24,7 @@
                     <ct:ClickableTextBlock Text="{Binding Name}" Click="OnTitleClick" />
                 </WrapPanel>
 
-                <Grid x:Name="LoadView" Background="#2fff">
+                <Grid x:Name="ViewLoad" Background="#2fff">
                     <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
                         <ProgressBar Width="24" Height="24" Margin="16"
                                      IsIndeterminate="True"
