--- a/App01.VLC/Views/MainWindow.xaml
+++ b/App01.VLC/Views/MainWindow.xaml
@@ -16,7 +16,7 @@
     </Window.Resources>
     <md3:DialogHost DialogTheme="Inherit" Identifier="DialogRoot"
                     SnackbarMessageQueue="{Binding ElementName=MainSnackbar, Path=MessageQueue}">
-        <Grid x:Name="ViewGrid">
+        <Grid x:Name="ViewGrid" Background="{DynamicResource MaterialDesign.Brush.Background}">
             <ScrollViewer>
                 <StackPanel Visibility="{Binding ShowPanel, Converter={StaticResource True2VisibleConverter}}">
                     <Grid Margin="0,10,0,10">
@@ -71,7 +71,7 @@
                                                 </BeginStoryboard>
                                             </EventTrigger>
                                         </Border.Triggers>
-                                        <Grid>
+                                        <Grid Background="{DynamicResource MaterialDesign.Brush.Chip.Background}">
                                             <Border x:Name="PART_Root" Opacity="0.2"
                                                     Background="{Binding Foreground, ElementName=PART_Title, Converter={StaticResource BrushOpacityConverter}, ConverterParameter=0.2}" />
 
@@ -82,12 +82,6 @@
                                                 </Grid.RowDefinitions>
 
                                                 <StackPanel Orientation="Horizontal" Grid.Row="0">
-                                                    <StackPanel.Background>
-                                                        <LinearGradientBrush StartPoint="0,1" EndPoint="1,0">
-                                                            <GradientStop Offset="0" Color="LightGray" />
-                                                            <GradientStop Offset="1" Color="White" />
-                                                        </LinearGradientBrush>
-                                                    </StackPanel.Background>
                                                     <Image Source="{Binding TvgLogo}" Width="28" Height="28"
                                                            Stretch="Uniform" Margin="2"
                                                            VerticalAlignment="Center" HorizontalAlignment="Center" />
