--- a/App18.Material/Views/MainWindow.xaml
+++ b/App18.Material/Views/MainWindow.xaml
@@ -63,7 +63,7 @@
                                     </Grid.RowDefinitions>
                                     <TextBlock Margin="0,0,10,0" Text="Light"
                                                Grid.Row="0" Grid.Column="0" />
-                                    <ToggleButton x:Name="DarkModeToggleButton"
+                                    <ToggleButton x:Name="DarkMode"
                                                   Click="MenuDarkModeButton_Click"
                                                   Grid.Row="0" Grid.Column="1" />
                                     <TextBlock Margin="10,0,0,0" Text="Dark"
