--- a/App01.VLC/Views/MainWindow.xaml
+++ b/App01.VLC/Views/MainWindow.xaml
@@ -7,12 +7,14 @@
         xmlns:ct="clr-namespace:App01.VLC.Controls"
         xmlns:md3="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:cv="clr-namespace:App01.VLC.Converter"
+        xmlns:system="clr-namespace:System;assembly=System.Runtime"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance vm:MainViewModel, IsDesignTimeCreatable=True}"
         PreviewKeyDown="MainWindow_OnPreviewKeyDown"
         Title="App01: Vlc播放" Height="640" Width="1080">
     <Window.Resources>
         <cv:True2VisibleConverter x:Key="True2VisibleConverter" />
+        <system:Double x:Key="IconSize">20</system:Double>
     </Window.Resources>
     <md3:DialogHost DialogTheme="Inherit" Identifier="DialogRoot"
                     SnackbarMessageQueue="{Binding ElementName=MainSnackbar, Path=MessageQueue}">
@@ -107,6 +109,21 @@
                     </Grid>
                 </StackPanel>
             </ScrollViewer>
+
+            <StackPanel Orientation="Vertical"
+                        HorizontalAlignment="Left" VerticalAlignment="Bottom"
+                        Margin="10">
+                <StackPanel>
+                    <Button Style="{StaticResource MaterialDesignIconButton}"
+                            Click="ButtonSource_OnClick">
+                        <md3:PackIcon
+                            Width="{StaticResource IconSize}"
+                            Height="{StaticResource IconSize}"
+                            Kind="AndroidStudio" />
+                    </Button>
+                    <TextBlock Text="更新源" HorizontalAlignment="Center" />
+                </StackPanel>
+            </StackPanel>
 
             <md3:Snackbar x:Name="MainSnackbar" MessageQueue="{md3:MessageQueue}" />
 
