优化部分UI在明暗主题下的细节

--- a/App01.VLC/Controls/VlcView.xaml
+++ b/App01.VLC/Controls/VlcView.xaml
@@ -30,7 +30,8 @@
                                      IsIndeterminate="True"
                                      Style="{StaticResource MaterialDesignCircularProgressBar}"
                                      Value="33" />
-                        <TextBlock Text="数据准备中..." />
+                        <TextBlock Text="数据准备中..."
+                                   Foreground="{DynamicResource MaterialDesign.Brush.Foreground}" />
                     </StackPanel>
                 </Grid>
             </Grid>
