--- a/App18.Material/Views/MainWindow.xaml
+++ b/App18.Material/Views/MainWindow.xaml
@@ -54,24 +54,10 @@
                                           Foreground="{DynamicResource MaterialDesign.Brush.Primary.Foreground}"
                                           PlacementMode="BottomAndAlignRightEdges">
                                 <StackPanel>
-                                    <Grid Margin="10">
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="Auto" />
-                                            <ColumnDefinition Width="Auto" />
-                                            <ColumnDefinition Width="Auto" />
-                                        </Grid.ColumnDefinitions>
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition />
-                                            <RowDefinition />
-                                        </Grid.RowDefinitions>
-                                        <TextBlock Margin="0,0,10,0" Text="Light"
-                                                   Grid.Row="0" Grid.Column="0" />
-                                        <ToggleButton x:Name="DarkMode"
-                                                      Click="MenuDarkModeButton_Click"
-                                                      Grid.Row="0" Grid.Column="1" />
-                                        <TextBlock Margin="10,0,0,0" Text="Dark"
-                                                   Grid.Row="0" Grid.Column="2" />
-                                    </Grid>
+                                    <StackPanel Orientation="Horizontal" Margin="10">
+                                        <TextBlock Margin="0,0,10,0" Text="暗色模式" />
+                                        <ToggleButton x:Name="DarkMode" Click="MenuDarkModeButton_Click" />
+                                    </StackPanel>
 
                                     <ListBox ItemsSource="{Binding ColorPresets}"
                                              SelectedItem="{Binding SelectedColorPreset}"
@@ -93,7 +79,7 @@
 
                     <!-- 抽屉 -->
                     <md3:DrawerHost.LeftDrawerContent>
-                        <DockPanel x:Name="DrawerView" Width="220"
+                        <DockPanel Width="220"
                                    Background="{DynamicResource MaterialDesign.Brush.Primary.Light}">
                             <ListBox Margin="0,16,0,16"
                                      ItemsSource="{Binding NavigationItems}"
@@ -117,6 +103,8 @@
                                         <Setter Property="md3:NavigationDrawerAssist.UnselectedIcon"
                                                 Value="{Binding UnselectedIcon}" />
                                         <Setter Property="Width" Value="200" />
+                                        <Setter Property="Background"
+                                                Value="{DynamicResource MaterialDesign.Brush.Background}" />
                                     </Style>
                                 </ListBox.ItemContainerStyle>
                             </ListBox>
