--- a/App18.Material/Views/PageDemo2.xaml
+++ b/App18.Material/Views/PageDemo2.xaml
@@ -1,11 +1,13 @@
 ﻿<UserControl x:Class="App18.Material.Views.PageDemo2"
+             x:Name="ViewRoot"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d"
-             Background="{DynamicResource MaterialDesign.Brush.Primary.Light}">
-    <Grid>
+             mc:Ignorable="d">
+    <Grid Style="{StaticResource MaterialDesign3Grid}">
+        <Grid x:Name="PartDot" Background="{DynamicResource MaterialDesign.Brush.Primary.Light}" Height="1" Width="1" />
+
         <Grid Width="900" Margin="20" VerticalAlignment="Top" HorizontalAlignment="Left">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="400" />
